--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "ORM_people_skills",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "ORM-People-Skills",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kenduigraha/ORM-People-Skills.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kenduigraha/ORM-People-Skills/issues"
-  },
-  "homepage": "https://github.com/kenduigraha/ORM-People-Skills#readme",
   "dependencies": {
-    "pg": "^6.1.0",
-    "sequelize": "^3.24.8"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
