--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "postgres",
-    "password": null,
+    "password": "postgres",
     "database": "db_user_skills",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": null,
+    "password": "postgres",
     "database": "db_user_skills",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "root",
-    "password": null,
+    "password": "postgres",
     "database": "db_user_skills",
     "host": "127.0.0.1",
     "dialect": "postgres"
